$Id$


===========================================================================
MARK: released gwenhywfar-0.9beta4 (2003/11/05)
===========================================================================


2003/11/03 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- fixed a bug in MsgEngine (did not add a trailing 0 to values read)
- MsgEngine is now able to share definitons with other MsgEngines


===========================================================================
MARK: released gwenhywfar-0.9beta3 (2003/11/02)
===========================================================================


2003/11/01 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- changed behaviour of GWEN_GetHomeDirectory: It now uses the effective
  user id instead of the real user id.


===========================================================================
MARK: released gwenhywfar-0.9beta2 (2003/11/01)
===========================================================================


2003/10/31 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added function GWEN_Version
- added parser module CSV


2003/10/30 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- fixed memory leaks


===========================================================================
MARK: released gwenhywfar-0.9beta1 (2003/10/27)
===========================================================================


2003/10/27 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- improved API documentation


2003/10/25 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added call to binTypeWrite function in MessageEngine code
- improved trustlevel handling in msgengine


2003/10/24 Martin Preuss <martin@libchipcard.de>
------------------------------------------------