@@ -21,8 +21,8 @@ AC_CONFIG_HEADER([config.h])
 GWENHYFWAR_VERSION_MAJOR=0
 GWENHYFWAR_VERSION_MINOR=9
 GWENHYFWAR_VERSION_PATCHLEVEL=1
-GWENHYFWAR_VERSION_BUILD=7
-GWENHYFWAR_VERSION_TAG="beta"
+GWENHYFWAR_VERSION_BUILD=8
+GWENHYFWAR_VERSION_TAG="cvs"
 GWENHYFWAR_VERSION_FULL_STRING="$GWENHYFWAR_VERSION_MAJOR.$GWENHYFWAR_VERSION_MINOR.$GWENHYFWAR_VERSION_PATCHLEVEL.$GWENHYFWAR_VERSION_BUILD($GWENHYFWAR_VERSION_TAG)"
 GWENHYFWAR_VERSION_STRING="$GWENHYFWAR_VERSION_MAJOR.$GWENHYFWAR_VERSION_MINOR.$GWENHYFWAR_VERSION_PATCHLEVEL($GWENHYFWAR_VERSION_TAG)"
 
